fix scrollbar style

--- a/src/app.css
+++ b/src/app.css
@@ -21,8 +21,9 @@
 }
 
 .scrollbar::-webkit-scrollbar-track {
-	background-color: none;
-	margin-block: 0.7rem;
+	background-color: var(--primary-color);
+	border-radius: 10px;
+	margin-block: 0.5rem;
 }
 
 @media (max-width: 1024px) {
@@ -30,7 +31,7 @@
 		width: 5px;
 	}
 	.scrollbar::-webkit-scrollbar-thumb {
-		background-color: #fff;
+		background-color: var(--primary-color);
 		border-radius: 5px;
 	}
 }
